--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -20,20 +20,20 @@ And for those who prefer a fully permissive path, **anyone can still fork from v
 
 
 
-If you've been following Open WebUI’s journey, you know our mission has always been: empower everyone with cutting-edge AI, no strings attached. Open WebUI is an independent project, built and maintained by a small, dedicated core team. Over the last year, we’ve poured **countless hours, late nights, and real financial resources** into making this tool world-class—**and we trust our users enough to keep it free and open**.
+If you've been following Open WebUI’s journey, you know our mission has always been: empower everyone with cutting-edge AI, no strings attached. Open WebUI is an independent project, built and maintained by a small, dedicated core team. Over the last year, we’ve poured **countless hours, late nights, and real financial resources** into making this tool world-class, **and we trust our users enough to keep it free and open**.
 
-But with Open WebUI’s rapid growth and success, we started seeing a pattern we couldn’t ignore: **bad actors taking our work, stripping the branding, selling it as their own, and giving nothing back.** That’s not open source—that’s exploitation. When organizations profit off our efforts, misrepresent our work, and box out the real community, it threatens the very spirit of what we’re trying to build.
+But with Open WebUI’s rapid growth and success, we started seeing a pattern we couldn’t ignore: **bad actors taking our work, stripping the branding, selling it as their own, and giving nothing back.** That’s not open source, that’s exploitation. When organizations profit off our efforts, misrepresent our work, and box out the real community, it threatens the very spirit of what we’re trying to build.
 
-That’s why we’ve acted: **with Open WebUI v0.6.6+ (April 2025), our license remains permissive, but now adds a fair-use branding protection clause**. This update does **not** impact genuine users, contributors, or anyone who simply wants to use the software in good faith. If you’re a real contributor, a small team, or an organization adopting Open WebUI for internal use—**nothing changes for you**. This change **only affects those who intend to exploit the project’s goodwill**: stripping away its identity, falsely representing it, and never giving back.
+That’s why we’ve acted: **with Open WebUI v0.6.6+ (April 2025), our license remains permissive, but now adds a fair-use branding protection clause**. This update does **not** impact genuine users, contributors, or anyone who simply wants to use the software in good faith. If you’re a real contributor, a small team, or an organization adopting Open WebUI for internal use, **nothing changes for you**. This change **only affects those who intend to exploit the project’s goodwill**: stripping away its identity, falsely representing it, and never giving back.
 
 In plain terms:
 - **Open WebUI is still free and permissively licensed.**
-- **You can still use, modify, and redistribute it for any purpose—just don’t remove or alter our branding unless you meet one of three clear criteria (see below).**
+- **You can still use, modify, and redistribute it for any purpose, just don’t remove or alter our branding unless you meet one of three clear criteria (see below).**
 - **The original BSD-3 license continues to apply for all contributions made to the codebase up to and including release v0.6.5.**
 
-We remain committed to transparency, openness, and supporting everyone—from hobbyists to enterprise. This is a “semi-copyleft” measure: we protect just the branding, to keep the project honest and sustainable; everything else is as free as you expect from open-source BSD.
+We remain committed to transparency, openness, and supporting everyone, from hobbyists to enterprise. This is a “semi-copyleft” measure: we protect just the branding, to keep the project honest and sustainable; everything else is as free as you expect from open-source BSD.
 
-We take your trust seriously. We want Open WebUI to stay **empowering and accessible**, **driven by real community spirit**—not gated, not locked-in, not co-opted by bad actors. We’re a small, lean team—but we care deeply about giving all our users the best experience and keeping our ecosystem clean and fair. **Thank you for supporting us, and for caring about the future of open AI.**
+We take your trust seriously. We want Open WebUI to stay **empowering and accessible**, **driven by real community spirit**, not gated, not locked-in, not co-opted by bad actors. We’re a small, lean team, but we care deeply about giving all our users the best experience and keeping our ecosystem clean and fair. **Thank you for supporting us, and for caring about the future of open AI.**
 
 ---
 
@@ -59,39 +59,39 @@ Open WebUI’s license now:
 
 :::
 
-This is not legal advice—refer to the full [LICENSE](https://github.com/open-webui/open-webui/blob/main/LICENSE) for exact language.
+This is not legal advice, refer to the full [LICENSE](https://github.com/open-webui/open-webui/blob/main/LICENSE) for exact language.
 
 ---
 
 ## Frequently Asked Questions (FAQ)
 
-### **1. Can I still use Open WebUI freely for personal projects, businesses, or teaching?**
+### 1. Can I still use Open WebUI freely for personal projects, businesses, or teaching?
 
 **Yes!** Just don’t remove or alter the “Open WebUI” branding, and you’re covered by the very permissive license with our light branding protection. Just don’t pretend your distribution is “official” from us if it isn’t.
 
-### **2. I want to fork Open WebUI and change the UI to fit my use case. Is that allowed?**
+### 2. I want to fork Open WebUI and change the UI to fit my use case. Is that allowed?
 
-**Absolutely.** You can change, extend, and customize the code or the user interface for your organization’s needs—but you’re required to keep “Open WebUI” branding visible *unless*:
+**Absolutely.** You can change, extend, and customize the code or the user interface for your organization’s needs, but you’re required to keep “Open WebUI” branding visible *unless*:
 - Your deployment is for **50 or fewer users in any 30-day window**; or
 - You’re a substantive project contributor **and** have received written permission to adjust branding for an internal deployment; or
 - You’ve secured an **enterprise license** with us that explicitly allows branding changes.
 
 If you remove or modify branding without meeting these criteria, that’s a material breach of the license.
 
-### **3. Aren’t these clauses contradictory? BSD-3 says you can’t use your name to promote forks, but also requires branding?!**
+### 3. Aren’t these clauses contradictory? BSD-3 says you can’t use your name to promote forks, but also requires branding?!
 
-**Good question!** Our branding requirement means you **mayn’t falsely promote** your fork as “endorsed by” or “officially part of” Open WebUI (BSD-3-Clause, section 3)—but it *must* still acknowledge its origins for transparency.
+**Good question!** Our branding requirement means you **mayn’t falsely promote** your fork as “endorsed by” or “officially part of” Open WebUI (BSD-3-Clause, section 3), but it *must* still acknowledge its origins for transparency.
 
 - **You must keep “Open WebUI” branding visible (unless you qualify as detailed above).**
 - **You must clarify (in your documentation/about/landing) that it’s a fork, not the official version.**
 - **You may not imply endorsement by us** for your derivative.
 
-This isn’t contradictory—think of it as “must acknowledge, but not misrepresent.”
+This isn’t contradictory, think of it as “must acknowledge, but not misrepresent.”
 Your compliance **both** (1) *retains our copyright info/branding* and (2) *avoids false advertising*.
 
-### **4. Why did you add this clause? Isn’t open source supposed to be fully free?**
+### 4. Why did you add this clause? Isn’t open source supposed to be fully free?
 
-We believe **open source thrives on trust, transparency, and mutual respect**. Open source is about sharing knowledge, empowering others, and building together—but it’s not about letting a handful of bad actors mislead and exploit the community for pure personal gain.
+We believe **open source thrives on trust, transparency, and mutual respect**. Open source is about sharing knowledge, empowering others, and building together, but it’s not about letting a handful of bad actors mislead and exploit the community for pure personal gain.
 
 Here’s what we’ve actually seen, and why we had to act:
 
@@ -99,38 +99,38 @@ Here’s what we’ve actually seen, and why we had to act:
 - They market these rebranded solutions in commercial offerings to customers and organizations, sometimes at a massive markup.
 - In some cases, they even go further by intentionally obscuring the fact that Open WebUI is available for free, so that they can charge unsuspecting users outrageous fees for something that should be accessible to everyone.
 - Some go so far as to misleadingly imply their users are dealing with the people behind the original Open WebUI, creating confusion and false expectations about who maintains the software, where it comes from, and what kind of support is available.
-- When things break or customers need feature updates, these same groups turn around and *demand support from us—the original developers—**while never having contributed a line of code, a helpful bug report, documentation, or any resources back to the project.***
+- When things break or customers need feature updates, these same groups turn around and *demand support from us, the original developers, **while never having contributed a line of code, a helpful bug report, documentation, or any resources back to the project.***
 - **In effect, they extract value from the collective effort of independent contributors, misrepresent their role in the project, and give nothing back to the ecosystem or its sustainability.**
 
 Let’s be clear:
-- **Not everyone who doesn’t contribute is a bad actor.** Using Open WebUI “as is,” for internal or not-for-profit ways, is absolutely fine. We expect most users will never contribute code, and that’s totally fair—that’s how permissive open source works!
-- **But there is a line:** When you start misleading your users about what you’re offering, exploiting the goodwill and energy of independent maintainers, and taking more than you give (especially when making money and actively denying credit), **that’s not collaboration—that’s extraction and misrepresentation.**
-- **This is especially demoralizing for us as a small, fully independent and self-funded team**, working incredibly hard to keep Open WebUI both free and at the leading edge of AI. The reality is that open source isn’t “free” for the people building it: it takes huge time investments, personal sacrifice, ongoing infrastructure costs, and dedication. When our goodwill is taken advantage of, it directly threatens our ability to keep this project alive and thriving for everyone else.
+- **Not everyone who doesn’t contribute is a bad actor.** Using Open WebUI “as is,” for internal or not-for-profit ways, is absolutely fine. We expect most users will never contribute code, and that’s totally fair, that’s how permissive open source works!
+- **But there is a line:** When you start misleading your users about what you’re offering, exploiting the goodwill and energy of independent maintainers, and taking more than you give (especially when making money and actively denying credit), **that’s not collaboration, that’s extraction and misrepresentation.**
+- The reality is that open source isn’t “free” for the people building it: it takes huge time investments, personal sacrifice, ongoing infrastructure costs, and dedication. When our goodwill is taken advantage of, it directly threatens our ability to keep this project alive and thriving for everyone else.
 
 **That’s why** the new branding clause exists. It is a minimal, carefully scoped, and entirely rational measure:
-- It preserves openness for genuine users and contributors—anyone can use, deploy, and even build commercial offerings as long as they respect transparency and our community’s work.
-- It prevents bad-faith actors from concealing our contributions or misleading users—protecting the project’s identity, trust, and reputation.
+- It preserves openness for genuine users and contributors, anyone can use, deploy, and even build commercial offerings as long as they respect transparency and our community’s work.
+- It prevents bad-faith actors from concealing our contributions or misleading users, protecting the project’s identity, trust, and reputation.
 - **Importantly, it also incentivizes individuals and organizations to actively contribute back to Open WebUI.** When companies are required to credit and retain the original branding, it creates a virtuous cycle: they’re far more likely to participate in the project, propose improvements, submit bug fixes, contribute features, or start a conversation about open collaboration for everyone’s benefit.
-- This collective approach **ensures that enhancements, security fixes, and new features are shared more openly, accelerating progress for the entire ecosystem—rather than being siloed in closed forks nobody else benefits from.**
+- This collective approach **ensures that enhancements, security fixes, and new features are shared more openly, accelerating progress for the entire ecosystem, rather than being siloed in closed forks nobody else benefits from.**
 
-We want Open WebUI to remain **free, empowering, and driven by honest spirit—protecting the project so it can serve everyone, not just those looking to exploit others’ effort for unearned gain.** The **branding protection clause targets only those edge-case exploiters**—no one else’s experience is affected. It is our genuine attempt to keep our community healthy, sustainable, and welcoming, while holding the project’s identity safe from predatory appropriation.
+We want Open WebUI to remain **free, empowering, and driven by honest spirit, protecting the project so it can serve everyone, not just those looking to exploit others’ effort for unearned gain.** The **branding protection clause targets only those edge-case exploiters**, no one else’s experience is affected. It is our genuine attempt to keep our community healthy, sustainable, and welcoming, while holding the project’s identity safe from predatory appropriation.
 
-We’re not interested in “locking down” Open WebUI. If we have to revisit the license again, we’ll do it only if truly forced by an escalation of abuse—something we hope won’t happen, because our commitment remains with the wider community.
+We’re not interested in “locking down” Open WebUI. If we have to revisit the license again, we’ll do it only if truly forced by an escalation of abuse, something we hope won’t happen, because our commitment remains with the wider community.
 
-We remain as open, reasonable, and fair as ever—and we trust the community to do the right thing.
+We remain as open, reasonable, and fair as ever, and we trust the community to do the right thing.
 
-### **5. I’m a real contributor. Do these restrictions limit my rights?**
+### 5. I’m a real contributor. Do these restrictions limit my rights?
 
 **No, and here’s precisely how it works:**
 
-- **All code contributed and merged up to and including v0.6.5 remains under the original BSD-3-Clause license—no new limitations apply.**
-  - *This means:* If you contributed anything before v0.6.6, you (and everyone else) retain all the original BSD-3 freedoms: use, modification, redistribution, even sublicensing—**as long as the original BSD-3 license notice remains intact. The BSD-3 license remains in effect for the entire codebase up to and including v0.6.5.**
+- **All code contributed and merged up to and including v0.6.5 remains under the original BSD-3-Clause license, no new limitations apply.**
+  - *This means:* If you contributed anything before v0.6.6, you (and everyone else) retain all the original BSD-3 freedoms: use, modification, redistribution, even sublicensing, **as long as the original BSD-3 license notice remains intact. The BSD-3 license remains in effect for the entire codebase up to and including v0.6.5.**
   - **BSD-3-Clause is one of the most permissive licenses available:** You can use the code for any purpose, even commercially, change it completely, and license your derivative under whatever terms you like, as long as you preserve the BSD-3 notice.
 
 - **The new “fair-use branding” clause only applies to code contributed after v0.6.5 and released as part of v0.6.6 or later,** *and only if you sign the new CLA as part of contributing new material*.
 
 - **Importantly:** The new license with the branding protection clause is **not being retroactively applied to the entire codebase**. It is only applied to the portion of the code that we (the core team) ourselves wrote (which, with a conservative estimate, is at least 80% of the code up to v0.6.5), and everything going forward starting with v0.6.6.
-  - All external/community-contributed code merged before v0.6.6 remains pure BSD-3 and is not covered by the branding clause—**no retroactive relicensing or constraints** will be applied to anyone else’s past contributions.
+  - All external/community-contributed code merged before v0.6.6 remains pure BSD-3 and is not covered by the branding clause, **no retroactive relicensing or constraints** will be applied to anyone else’s past contributions.
 
 - Looking at the history of [contributors to Open WebUI](https://github.com/open-webui/open-webui/graphs/contributors), **at least 80% of the codebase (very conservatively) originates directly from our core team**. Even community pull requests that are merged are always *manually reviewed, edited, heavily reworked, and improved* to meet our standards before being included. Nothing is “blind-merged.”
 
@@ -138,14 +138,14 @@ We remain as open, reasonable, and fair as ever—and we trust the community to 
 
 - **If you do not like the direction the project takes or disagree with the new license terms, you are always free to fork or build upon the codebase as it existed at v0.6.5 or earlier.** Version 0.6.5 (and anything before it) remains under the original, unmodified BSD-3-Clause, giving you full flexibility to start your own fork, modify, or redistribute as you see fit under terms allowed by BSD-3.
 
-#### **Summary for contributors:**
+#### Summary for contributors:
 
-- **Contributions committed up to v0.6.5 are BSD-3 only:** Full flexibility, full BSD-3 freedom. You can fork, relicense, rebrand your own code—anything allowed by BSD-3, provided you retain our BSD notice.
+- **Contributions committed up to v0.6.5 are BSD-3 only:** Full flexibility, full BSD-3 freedom. You can fork, relicense, rebrand your own code, anything allowed by BSD-3, provided you retain our BSD notice.
 - **From v0.6.6 onward,** if you choose to contribute, you will agree (via CLA) to the new license terms, which include the branding protection clause for *new* contributions.
-- **Legacy code you contributed remains governed by BSD-3—no changes, no retroactive restrictions.**
-- **Complete flexibility to fork:** If you ever need or want to take the project in another direction without the new branding clause, use v0.6.5 or earlier as your starting point—it’s entirely your right under BSD-3.
+- **Legacy code you contributed remains governed by BSD-3, no changes, no retroactive restrictions.**
+- **Complete flexibility to fork:** If you ever need or want to take the project in another direction without the new branding clause, use v0.6.5 or earlier as your starting point, it’s entirely your right under BSD-3.
 
-If in doubt, or if you have concerns about your past or future contributions, please reach out—we value every contributor and are committed to respecting your rights.
+If in doubt, or if you have concerns about your past or future contributions, please reach out, we value every contributor and are committed to respecting your rights.
 
 :::info
 
@@ -153,20 +153,20 @@ BSD-3 output/forks have **maximum flexibility**: as long as you keep the origina
 
 :::
 
-### **6. Does this mean Open WebUI is “no longer open source”?**
+### 6. Does this mean Open WebUI is “no longer open source”?
 
-It's a great—and complicated—question, because **"open source" can mean many different things to many people**.
+It's a great, and complicated, question, because **"open source" can mean many different things to many people**.
 
-- **In the narrowest, most “by-the-book” sense—our new branding clause means Open WebUI v0.6.6+ isn’t OSI-certified "open source.”**
+- **In the narrowest, most “by-the-book” sense, our new branding clause means Open WebUI v0.6.6+ isn’t OSI-certified "open source.”**
     - Example: The OSI would not certify licenses that require you to keep original branding.
 
-- However, compared to what most people mean in practice — **“is the code available, can I use it, fork it, change it, build things with it, and not pay you or get a special key?”** — the answer is still a resounding **yes**.
+- However, compared to what most people mean in practice ,  **“is the code available, can I use it, fork it, change it, build things with it, and not pay you or get a special key?”** ,  the answer is still a resounding **yes**.
     - We are far more open than most so-called “open core” projects, which often wall off features, require payments for APIs, or keep critical work private.
 
 **What does all this mean in practice for you?**
 - *All of the source code is public and developed in the open.*
-- *You can use it, run it locally, build on it, host it for your team or business, and even charge for access—as long as you follow the simple, clearly-scoped branding condition. (And if that’s an issue, email us! There’s a path for everyone.)*
-- *If you want to fork, extend, or submit PRs, the process and permissions are as open as ever—no “private enterprise fork” that fractures the community or walls off features.*
+- *You can use it, run it locally, build on it, host it for your team or business, and even charge for access, as long as you follow the simple, clearly-scoped branding condition. (And if that’s an issue, email us! There’s a path for everyone.)*
+- *If you want to fork, extend, or submit PRs, the process and permissions are as open as ever, no “private enterprise fork” that fractures the community or walls off features.*
 
 **Why this approach?**
 Some projects in our position have responded to exploitation by:
@@ -175,19 +175,19 @@ Some projects in our position have responded to exploitation by:
 - Switching to restrictive licenses like SSPL or BSL that block nearly all serious commercial use.
 
 **We didn’t want to do that.**
-We want a single, shared, public codebase where everyone—from solo hackers to enterprises—can benefit from the same core improvements, transparent development, and community fixes.
+We want a single, shared, public codebase where everyone, from solo hackers to enterprises, can benefit from the same core improvements, transparent development, and community fixes.
 
-We believe open ecosystems work best for users, contributors, and the future of AI. If you ever need more permissions or have questions, just talk to us—we’re committed to finding solutions that respect our contributors and community.
+We believe open ecosystems work best for users, contributors, and the future of AI. If you ever need more permissions or have questions, just talk to us, we’re committed to finding solutions that respect our contributors and community.
 
-### **7. What if I want to white-label or deeply customize Open WebUI for my enterprise?**
+### 7. What if I want to white-label or deeply customize Open WebUI for my enterprise?
 
 Contact us! We offer **proprietary and enterprise licenses** allowing fully custom branding, priority support, feature requests, and more. [Click here](https://docs.openwebui.com/enterprise) for details.
 
-### **8. What if I already deployed Open WebUI before v0.6.6?**
+### 8. What if I already deployed Open WebUI before v0.6.6?
 
-Anything pre-0.6.6 is pure BSD-3—**these branding limits didn’t exist**. The new branding clause applies only to future versions/releases; retroactive enforcement is not possible.
+Anything pre-0.6.6 is pure BSD-3, **these branding limits didn’t exist**. The new branding clause applies only to future versions/releases; retroactive enforcement is not possible.
 
-### **9. What about forks? Can I start one and remove all Open WebUI mentions?**
+### 9. What about forks? Can I start one and remove all Open WebUI mentions?
 
 **Only if:**
 - Your fork is for “small scale” deployment (**≤50 users/30-day period**), or
@@ -196,7 +196,7 @@ Anything pre-0.6.6 is pure BSD-3—**these branding limits didn’t exist**. The
 
 Otherwise, you must retain branding and clearly say your fork isn't the official version.
 
-### **10. I’m an individual academic/non-profit researcher. Can I customize or remove branding for a research study?**
+### 10. I’m an individual academic/non-profit researcher. Can I customize or remove branding for a research study?
 
 :::info
 
@@ -204,7 +204,7 @@ Please note: *This exemption is intended **exclusively for research studies**, n
 
 :::
 
-**Absolutely—academic research matters to us!** If you’re a researcher at a non-profit or academic institution conducting a **specific, time-limited research project** (for example: a user study, clinical trial, or classroom experiment), you may request permission to **remove or customize Open WebUI branding** for the duration of your study. **This is intended for single, well-defined research projects**—not for regular, day-to-day platform use across a department or lab.
+**Absolutely, academic research matters to us!** If you’re a researcher at a non-profit or academic institution conducting a **specific, time-limited research project** (for example: a user study, clinical trial, or classroom experiment), you may request permission to **remove or customize Open WebUI branding** for the duration of your study. **This is intended for single, well-defined research projects**, not for regular, day-to-day platform use across a department or lab.
 
 To apply:
 Please email us at [research-study@openwebui.com](mailto:research-study@openwebui.com) and use the subject line:
@@ -225,7 +225,7 @@ We review requests individually and, in almost all cases, will grant permission 
 - Removing branding for ongoing departmental use, internal tooling, or public university portals
 - “White-labeling” for all organization users beyond a research study scope
 
-We’re happy to help make Open WebUI accessible for your research—just ask!
+We’re happy to help make Open WebUI accessible for your research, just ask!
 
 ---
 
@@ -235,7 +235,7 @@ If you operate a public fork, or a paid SaaS, and retain the Open WebUI branding
 
 > *“This project is a customized fork of [Open WebUI](https://github.com/open-webui/open-webui). This release is not affiliated with or maintained by the official Open WebUI team.”*
 
-Display this message—prominently—in the About section, landing page, or equivalent location. **Transparency is required.**
+Display this message, prominently, in the About section, landing page, or equivalent location. **Transparency is required.**
 
 ---
 
@@ -261,15 +261,15 @@ We want to make it as straightforward as possible for everyone, users, businesse
 | Scenario | Allowed Without License? | Guidance / Notes |
 |---|:---:|---|
 | **Use Open WebUI “as is” with branding** | ✅ | Just use the software as provided; no changes to logo, name, or identity. Easiest option! |
-| **Add custom features, UI extensions, plugins while keeping Open WebUI branding fully intact** | ✅ | Absolutely encouraged! You can add new buttons, workflows, extensions, etc.—just don’t remove or alter Open WebUI’s own name and logo. |
+| **Add custom features, UI extensions, plugins while keeping Open WebUI branding fully intact** | ✅ | Absolutely encouraged! You can add new buttons, workflows, extensions, etc., just don’t remove or alter Open WebUI’s own name and logo. |
 | **Deploy to any number of internal users within your own organization (with all official branding kept)** | ✅ | Scale however you like! No per-user limits for internal/staff/company-wide use as long as Open WebUI branding is always present and prominent. |
-| **Integrate Open WebUI with internal tools, scripts, or enterprise authentication** | ✅ | SSO, LDAP, custom backends—all welcomed! Integration is wide open, provided branding remains. |
+| **Integrate Open WebUI with internal tools, scripts, or enterprise authentication** | ✅ | SSO, LDAP, custom backends, all welcomed! Integration is wide open, provided branding remains. |
 | **Add a small, unobtrusive info banner at top, bottom, or side (e.g., “Managed by YourOrg”)** | ✅ | Banner must be visually secondary/subordinate (footer, bottom-right, etc.), not obscuring or distracting from Open WebUI’s branding. |
-| **Add a legal or company link/notice in the About modal/dialog** | ✅ | Feel free to provide an additional legal link, team contact, or credits section—just never replace or remove Open WebUI credits. |
+| **Add a legal or company link/notice in the About modal/dialog** | ✅ | Feel free to provide an additional legal link, team contact, or credits section, just never replace or remove Open WebUI credits. |
 | **Add monitoring, analytics, or custom backend features** | ✅ | Backend integrations and observability are totally permitted. No restrictions if branding/UI is untouched. |
 | **Create and maintain your own public fork (with all branding, plus “fork disclosure” notice)** | ✅ | As long as you keep branding as required and clearly state it’s “a fork of Open WebUI, not official.” |
-| **Link to your company/project/github in the footer or About box** | ✅ | No problem if subordinate—must not give impression of replacing or rebranding the app. |
-| **For deployments ≤50 users/rolling 30-day period** | ✅ | “Small scale” deployments may remove Open WebUI branding, but only under the explicit user count threshold—see policy for details. |
+| **Link to your company/project/github in the footer or About box** | ✅ | No problem if subordinate, must not give impression of replacing or rebranding the app. |
+| **For deployments ≤50 users/rolling 30-day period** | ✅ | “Small scale” deployments may remove Open WebUI branding, but only under the explicit user count threshold, see policy for details. |
 
 ### **What is NOT ALLOWED Without an Enterprise/Proprietary License**
 
@@ -289,11 +289,11 @@ We want to make it as straightforward as possible for everyone, users, businesse
 - **Co-branding is not allowed at all.** You may NOT display your branding/logo adjacent to or alongside Open WebUI’s logo/name, nor may you display your branding in a manner that creates visual equivalence or confusion.
 - **If you want to add a “Managed by Company X” banner**, it must remain clearly distinct, unobtrusive, and subordinate to Open WebUI’s own visual hierarchy.
 - **Don’t “co-brand” or sandwich your logo next to ours** without explicit written approval. For nearly all non-trivial cases, you will need a commercial or custom license.
-- **Always show us a screenshot before launch!** If in doubt, email [hello@openwebui.com](mailto:hello@openwebui.com)—we’re happy to review and advise.
+- **Always show us a screenshot before launch!** If in doubt, email [hello@openwebui.com](mailto:hello@openwebui.com), we’re happy to review and advise.
 
 ### **Still Unsure?**
 
-If you’re ever unsure, please feel free to contact us and share your planned deployment (even just a screenshot or Figma mockup) before launching. Our goal is to work with everyone and support honest, respectful uses—we’re always happy to offer guidance or help you with the right license if needed. Openness and fairness for all is important to us, so let’s collaborate to make it work for everyone.
+If you’re ever unsure, please feel free to contact us and share your planned deployment (even just a screenshot or Figma mockup) before launching. Our goal is to work with everyone and support honest, respectful uses, we’re always happy to offer guidance or help you with the right license if needed. Openness and fairness for all is important to us, so let’s collaborate to make it work for everyone.
 
 ---
 
