--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -15,7 +15,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 To keep Open WebUI thriving for the long term, we’ve introduced a **lightweight branding protection clause** that helps us sustain the project while ensuring **every user** continues to benefit from rapid innovation **without resorting to gated features or paywalled functionality**. As a small, independent team building mission-critical AI tooling, we rely on fair attribution to support ongoing development, security, and quality, all without restricting real users, contributors, or businesses who use Open WebUI responsibly.
 
-And for those who prefer a fully permissive path, **anyone can still fork from v0.6.5 with zero restrictions and build from there however they choose**. It’s a simple, balanced step that protects the ecosystem, strengthens the project, and **ensures we can sustain our mission of empowering everyone**.
+And for those who prefer a fully permissive path, **[anyone can still fork from v0.6.5 with zero restrictions and build from there however they choose](https://github.com/open-webui/open-webui/blob/main/LICENSE_HISTORY)**. It’s a simple, balanced step that protects the ecosystem, strengthens the project, and **ensures we can sustain our mission of empowering everyone**.
 :::
 
 
